[tool.poetry]
name = "messager"
version = "0.1.0"
description = "Package to create log messages."
authors = ["eniocsjunior <eniocsjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tzdata = "^2024.2"

[tool.poetry.group.sql]
optional = true

[tool.poetry.group.sql.dependencies]
peewee = "^3.17.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
